--- a/blogpost.html
+++ b/blogpost.html
@@ -12,7 +12,7 @@
             </div>
             <div id="post">
                 <h1>Este es el titulo atractivo e interesante del post </h1>
-                <p>Y este es el parrafo de 
+                <p>Y este es el párrafo de 
                     inicio donde vamos a explicar
                     las cosas increibles que se 
                     pueden hacer con ramas</p>
@@ -24,6 +24,8 @@
                     conferencias o salir en
                     Youtube. Excepto si eres un rockstar.
                     Pero estadísticamente no lo eres...por ahora.
+
+                    Supuestamente aquí se iban a arreglar errores ortográficos
                 </p>    
                 <p>
                     Suscribete y dale like
